* Fixed the font family used in <pre> tags. It seems that the generic monospace font family is displayed in different sizes under FF and IE. Under FF, it was illegibly small. This fix addresses issue #24 (http://code.google.com/p/elmah/issues/detail?id=24).

--- a/src/Elmah/ErrorLog.css
+++ b/src/Elmah/ErrorLog.css
@@ -47,6 +47,11 @@ a:hover
     color: #FF6600;
 }
 
+pre
+{
+    font-family: "Courier New", Courier;
+}
+
 table
 {
     width: 100%;
